<resources>
    <string name="app_name">HookGG</string>
    <string name="module_inactive">Inactive</string>
    <string name="module_active">Active</string>
    <string name="nav_log_page">LogPage</string>
    <string name="nav_func_page">FuncPage</string>
    <string name="nav_set_page">SetPage</string>
    <string name="tab_copy">Copy</string>
    <string name="tab_save">Save</string>
    <string name="tab_clear">Clear</string>
    <string name="tab_wrap">Wrap</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_decline">Decline</string>
    <string name="dialog_warning">Warning</string>
    <string name="dialog_warning_message">This function may be risky, should it continue to be enabled?</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="func_menu">FabMenu</string>
    <string name="func_gg">GG</string>
    <string name="func_string">String</string>
    <string name="func_math">Math</string>
    <string name="func_help">Please go to the setPage to configure the intercept package name and version</string>
    <string name="prefs_about">About</string>
    <string name="prefs_key_app_version">AppVersion</string>
    <string name="prefs_desc_app_version">1.0.000(20240101)</string>
    <string name="prefs_key_app_language">AppLanguage</string>
    <string name="prefs_desc_app_language">Default</string>
    <string name="language_default">Default</string>
    <string name="language_en">English</string>
    <string name="language_zh">中文</string>
    <string name="prefs_desc_app_version_fmt">%1$s(%2$d)</string>
    <string name="prefs_basic">Basic</string>
    <string name="prefs_key_package_name">Intercept Package Name</string>
    <string name="prefs_desc_package_name">catch_.me_.if_.you_.can_</string>
    <string name="prefs_desc_package_name_click">Quick Options(Click Settings)</string>
    <string name="prefs_key_version_name">Intercept Version Name</string>
    <string name="prefs_desc_version_name">96.0</string>
    <string name="prefs_key_output_mode">Intercept Output Mode</string>
    <string name="prefs_desc_output_mode">Log(Developing)</string>
    <string name="prefs_more">More</string>
    <string name="prefs_key_print_return">Print Function Return</string>
    <string name="prefs_key_filter_param">Filter Exception Param</string>
    <string name="prefs_test">Test</string>
    <string name="prefs_key_test_func">TestFunc</string>
    <string name="filter_invalid_length">Filter InValid Length</string>
    <string name="filter_invalid_params">Filter InValid Params</string>
</resources>